<resources>
    <string name="app_name">My Marketplace</string>
    <string name="label_title">Marketim</string>
    <string name="hint_user_name">Kullanıcı Adı</string>
    <string name="hint_password">Parola</string>
    <string name="label_login">Giriş Yap</string>
    <string name="label_remember_next_time">Sonraki girişimde hatırla</string>
    <string name="label_wrong_user_name_or_password">Yanlış kullanıcı adı ya da parola</string>
    <string name="label_my_orders">Siparişlerim</string>
    <string name="label_logout">Çıkış Yap</string>
    <string name="label_try_again">Yeniden Dene</string>
    <string name="error_product_fetch">Ürünler çekilirken bir hata oluştu</string>
    <string name="dialog_title_exit">Çıkış yap !</string>
    <string name="dialog_message_exit_confirmation">Çıkış yapmak istediğinize emin misiniz ?</string>
    <string name="label_yes">Evet</string>
    <string name="label_no">Hayır</string>
    <string name="error_username_empty">Bir kullanıcı adı girmelisiniz</string>
    <string name="error_password_length">Parolanız 6 karakter veya daha uzun olmalıdır.</string>
</resources>
