<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginViewModel"
            type="com.eminayar.mymarketplace.views.login.LoginViewModel" />

        <variable
            name="rememberSelected"
            type="boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryRed">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/label_title"
            android:textColor="@color/black"
            android:textSize="42sp"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@id/title_text_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_user_name"
                android:text="@={loginViewModel.userName}"
                android:textColor="@color/white"
                android:textColorHint="#ccc" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@id/user_name_text_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pasword_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:text="@={loginViewModel.password}"
                android:textColor="@color/white"
                android:textColorHint="#ccc" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/remember_me_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checked="@={rememberSelected, default=false}"
            app:layout_constraintStart_toStartOf="@id/user_password_text_input_layout"
            app:layout_constraintTop_toBottomOf="@id/user_password_text_input_layout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/label_remember_next_time"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/remember_me_switch"
            app:layout_constraintStart_toEndOf="@id/remember_me_switch"
            app:layout_constraintTop_toTopOf="@id/remember_me_switch" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/black"
            android:onClick="@{(v) -> loginViewModel.onLoginClicked(v)}"
            android:text="@string/label_login"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>